--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         </activity>
         <activity android:name=".Registro" />
         <activity android:name=".Perfil" />
+        <activity android:name=".PerfilActivity"/>
+        <activity android:name=".Todosperfiles"/>
+
     </application>
 
 </manifest>
