--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                    android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Registro" />
-        <activity android:name=".Perfil" />
-        <activity android:name=".PerfilActivity"/>
+        <activity android:name=".Registro"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Perfil"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PerfilActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
