--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Internet"></activity>
+        <activity android:name=".Internet"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +29,9 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".PerfilActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".DetalleTodosLosUsuarios"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
